first stretch goal: fixed nav bar

--- a/css/index.css
+++ b/css/index.css
@@ -192,6 +192,12 @@ p {
   align-items: center;
   background-color: #F6F6F6;
   border-bottom: 2px solid #F1F1F1;
+  position: fixed;
+  /* Set the navbar to fixed position */
+  top: 0;
+  /* Position the navbar at the top of the page */
+  width: 100%;
+  /* Full width */
 }
 .nav-bar .nav-links {
   display: flex;
